[tool.poetry]
name = "transmitm"
version = "0.1.0"
description = "Transport layer transparent intercepting proxy."
authors = ["tsundokul <timofte.daniel@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.7"
twisted = "^20.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
autopep8 = "^1.5.3"
pydoc-markdown = "^3.3.0"
mkdocs = "^1.1.2"
pytest-twisted = "^1.12"
yapf = "^0.30.0"
pytest-cov = "^2.10.0"
pytest-pep8 = "^1.0.6"
vermin = "^0.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
